--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -38,12 +38,16 @@ excludes=
 file.reference.compilerTools-2.3.7.jar=compilerTools-2.3.7.jar
 file.reference.flatlaf-2.0-rc1.jar=flatlaf-2.0-rc1.jar
 file.reference.jflex-full-1.8.2.jar=jflex-1.8.2\\lib\\jflex-full-1.8.2.jar
+file.reference.jflex-full-1.8.2.jar-1=jflex-full-1.8.2.jar
+file.reference.JFlex.jar=JFlex.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.jflex-full-1.8.2.jar}:\
     ${file.reference.compilerTools-2.3.7.jar}:\
-    ${file.reference.flatlaf-2.0-rc1.jar}
+    ${file.reference.flatlaf-2.0-rc1.jar}:\
+    ${file.reference.JFlex.jar}:\
+    ${file.reference.jflex-full-1.8.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -83,7 +87,7 @@ main.class=Compilador
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_15
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
